--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
     "extra": {
         "laravel": {
             "providers": [
-                "sahifedp\\helpers\\HelpersServiceProvider"
+                "sahifedp\\Helpers\\HelpersServiceProvider"
             ],
             "aliases": {
-            	"Helpers": "sahifedp\\helpers\\Helpers"
+
             }
         }
     },
     "autoload": {
         "psr-4": {
-            "sahifedp\\helpers\\": "src/"
+            "sahifedp\\Helpers\\": "src/"
         }
     }
 }
